Fix layout bugs

--- a/src/components/MainNav/MainNav.scss
+++ b/src/components/MainNav/MainNav.scss
@@ -44,6 +44,10 @@
         text-transform: uppercase;
         letter-spacing: 1.6px;
 
+        width: 70px;
+        text-align: center;
+
+        white-space: nowrap;
         margin: 0 30px;
         cursor: pointer;
 
